--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,16 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
+    "types": ["node"],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
     "plugins": [
       {
-        "name": "next"
+        "name": "next",
+        "typeRoots": ["./node_modules/@types", "./typings"]
       }
     ],
     "paths": {
