--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-icons": "^5.3.0",
+    "rimraf": "^6.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -21,7 +22,8 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
-    "eslint": "^8",
+    "@types/three": "^0.169.0",
+    "eslint": "^9.13.0",
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
