--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
   "name": "hlolo-portfolio-website",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "A portfolio website project",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "build": "next build",
+    "dev": "next dev"
   },
+  "keywords": [],
+  "author": "Hlolo Modiane",
+  "license": "ISC",
   "dependencies": {
-    "mini-svg-data-uri": "^1.4.4",
-    "next": "15.0.0",
-    "react": "^19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "react-icons": "^5.3.0",
-    "rimraf": "^6.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "@react-three/fiber": "^8.17.10",
+    "framer-motion": "^7.10.3",
+    "next": "^15.0.0",
+    "next-themes": "^0.0.15",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "three": "^0.170.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18",
-    "@types/react-lottie": "^1.2.10",
+    "@eslint/js": "^9.14.0",
+    "@types/node": "^22.8.7",
     "@types/three": "^0.169.0",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.2",
+    "glob": "^7.2.0",
+    "globals": "^15.12.0",
+    "rimraf": "^3.0.0",
+    "typescript-eslint": "^8.12.2"
   }
 }
