--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,20 +10,23 @@
     "module": "esnext",
     "moduleResolution": "node",
     "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./typings"],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": "src",
     "incremental": true,
+    "paths": {
+      "@/*": ["./*"],
+      "@/components/*": ["components/*"],
+      "@/ui/*": ["ui/*"]
+    },
     "plugins": [
       {
         "name": "next",
         "typeRoots": ["./node_modules/@types", "./typings"]
       }
-    ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+    ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
