--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@react-three/fiber": "^8.17.10",
+    "clsx": "^2.1.1",
     "framer-motion": "^7.10.3",
     "next": "^15.0.0",
     "next-themes": "^0.0.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
     "three": "^0.170.0"
   },
   "devDependencies": {
